<resources>
    <string name="app_name">My Application Assignment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="hello_world">Hello World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="settings_page">Settings Page</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="espresso">Espresso</string>
    <string name="order_now">Order Now</string>
    <string name="latte">Latte</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="more_coffees">More Coffees</string>
    <string name="welcome_to_coffeeapp">Welcome to CoffeeApp!</string>
    <string name="featured_coffee">Featured Coffee</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="_4_99">$4.99</string>
    <string name="_3_99">$ 3.99</string>
    <string name="featured_products">Featured Products</string>
    <string name="more_products">More Products</string>
    <string name="good_morning">Good Morning</string>
    <string name="chicken_burger">Chicken Burger</string>
    <string name="vegan_burger">Vegan Burger</string>
    <string name="beef_burger">Beef Burger</string>
    <string name="fillet_burger">Fillet Burger</string>
    <string name="back">back</string>
    <string name="product_name">product name</string>
    <string name="price_4_99">price 4.99</string>
</resources>